fix overlap appointment box in week calendar

--- a/src/features/Appointments/WeekCalendar/styles.less
+++ b/src/features/Appointments/WeekCalendar/styles.less
@@ -57,6 +57,8 @@
           .rbc-event {
             border-radius: 0 @border-radius-base @border-radius-base 0;
             z-index: 2;
+            width: 100% !important;
+            left: 0 !important;
             .rbc-event-label {
               display: none;
             }
